--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ https://templatemo.com/tm-563-seo-dream
                   <div class="col-lg-4 col-sm-4">
                     <div class="info-stat">
                       <h6>ADMIN 2 VH-TEAM</h6>
-                      <h4>$50/1 AD</h4>
+                      <h4>$50/1 ADM</h4>
                     </div>
                   </div>
                   <div class="col-lg-12">
