--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
-    <title>DGQ DEVELOPER - Creative Website by Vu Han UI DESINGER</title>
+    <title>DGQ DEVELOPER - VUHAN UI DESINGER</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -106,7 +106,7 @@ https://templatemo.com/tm-563-seo-dream
                     </div>
                   </div>
                   <div class="col-lg-12">
-                    <h2>DVIT &amp; ALL TOOL - BY DGQ ADMIN</h2>
+                    <h2>DVIT &amp; DDOS TOOL - BY DGQ ADMIN</h2>
                   </div>
                   <div class="col-lg-12">
                     <div class="main-green-button scroll-to-section">
@@ -272,7 +272,7 @@ https://templatemo.com/tm-563-seo-dream
         </div>
         <div class="col-lg-6 align-self-center wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
           <div class="section-heading">
-            <h6>About Us</h6>
+            <h6>About Me</h6>
             <h2>Top <em>marketing</em> agency &amp; Become famous <span>with us</span></h2>
           </div>
           <div class="row">
@@ -285,7 +285,7 @@ https://templatemo.com/tm-563-seo-dream
             <div class="col-lg-4 col-sm-4">
               <div class="about-item">
                 <h4>20+</h4>
-                <h6>website is VH-TEAM ddos</h6>
+                <h6>website is VH-TEAM attack</h6>
               </div>
             </div>
             <div class="col-lg-4 col-sm-4">
