--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ https://templatemo.com/tm-563-seo-dream
                     </div>
                   </div>
                   <div class="col-lg-12">
-                    <h2>DVIT &amp; DDOS TOOL - BY DGQ ADMIN</h2>
+                    <h2>DVMXH &amp; DDOS - LIKE - SHARE - FOLLOWER FB TIKTOK & INS</h2>
                   </div>
                   <div class="col-lg-12">
                     <div class="main-green-button scroll-to-section">
