--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ https://templatemo.com/tm-563-seo-dream
               </div>
             </div>
           </div>
-          <p><a rel="nofollow" href="https://github.com/giaquy208" target="_blank">Dinh Gia Quy</a> is the founder of VH-TEAM, ddos attacks on different websites without permission.</p>
+          <p><a rel="nofollow" href="https://github.com/giaquy208" target="_blank">Dinh Gia Quy</a> is the founder of VH-TEAM, ddos attacks on different websites without permission, chúng tôi có các dịch vụ như : Hỗ trợ fb - internet - tấn công website & chống tấn công.</p>
           <div class="main-green-button"><a href="#">Discover company</a></div>
         </div>
       </div>
